--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.15.2"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0"
   }
 }
