--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "main": "server.js",
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "morgan": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "^3.19.0"
