--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "url": "https://github.com/are-you-ready/server/issues"
   },
   "main": "server.js",
+  "scripts": {
+    "reset-db": "node ./scripts/resetDb.js"
+  },
   "dependencies": {
     "express": "^4.15.2",
+    "mongoose": "^4.10.4",
     "morgan": "^1.8.1"
   },
   "devDependencies": {
