--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "bugs": {
     "url": "https://github.com/are-you-ready/server/issues"
   },
-  "main": "server.js",
+  "main": "./server/index.js",
   "scripts": {
     "reset-db": "node ./scripts/resetDb.js"
   },
