--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "reset-db": "node ./scripts/resetDb.js"
   },
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.2",
     "mongoose": "^4.10.4",
     "morgan": "^1.8.1"
