--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.2",
     "mongoose": "^4.10.4",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "eslint": "^3.19.0"
